# lightecho-stellar-oracle

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  INFRASTRUCTURE.md  LICENSE.md  README.md  blockchain_oracle.md  run  systemd-status.sh
.github/workflows/: consumer-lastprice-usd.yml  oracle-contract.yml
archive/manage_prices_contract/soroban-py/: config.py
archive/xlm_balance_contract/: Cargo.toml  README.md
docs/: CNAME  README.md  index.html  onchain.html  v2.html
github-pages/: onchain.html
init/systemd/: bump_instance.service  bump_instance.timer  feed_all_from_db.service  feed_all_from_db.timer  feed_bulk_from_db.service  feed_bulk_from_db.timer  oracle_api.service
manage_prices/: Cargo.toml  README.md
manage_prices/.soroban/: ledger.json
manage_prices/src/: lib.rs  test.rs
manage_prices_contract/: Cargo.toml  README.md
manage_prices_contract/.soroban/: ledger.json
manage_prices_contract/python_imp/: main.py  soroban.py
manage_prices_contract/soroban-py/: README.md  config.py  main.py  raw.txt  soroban.py
manage_prices_contract/src/: lib.rs  test.rs
oracle-embedded/cli/: README.md  cli.py  pyproject.toml
oracle-onchain/api/: .gitignore  README.md  pyproject.toml  server.py  server.sh
oracle-onchain/cli/: README.md  binance.py  cli.py  pyproject.toml
oracle-onchain/cli/.vim/: coc-settings.json
oracle-onchain/cli/v1/: pyproject.toml
oracle-onchain/cli/v2/: README.md  cli.py
oracle-onchain/contract/: Cargo.toml  README.md
oracle-onchain/contract/src/: lib.rs  test.rs  v2.rs
oracle-onchain/contract/v2/src/: lib.rs
oracle-onchain/sep40/cli/: README.md  binance.py  cli  cli.py  poetry_install.sh  pyproject.toml
oracle-onchain/sep40/cli/scripts/: .gitignore  autorestart.sh  bump_instance.py  bump_instance.sh  feed_all_from_db.py  feed_all_from_db.sh  feed_binance.py  feed_bulk_from_db.py  feed_bulk_from_db.sh  feed_stellar.py  send_email_failed_bulk_prices.sh  send_email_failed_bump_instance.sh  send_email_failed_feed_prices.sh
oracle-onchain/sep40/contract/: Cargo.toml  Makefile  README.md
oracle-onchain/sep40/contract/scripts/: deploy.sh
oracle-onchain/sep40/contract/src/: constants.rs  contract.rs  contract_light.rs  contract_map.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  test_light.rs  types.rs  utils.rs
oracle-onchain/sep40/examples/collateral_loan/: Cargo.toml
oracle-onchain/sep40/examples/collateral_loan/src/: lib.rs  storage_types.rs  test.rs
oracle-onchain/sep40/examples/fetch_lastprice_usd/: Cargo.toml  README.md
oracle-onchain/sep40/examples/fetch_lastprice_usd/src/: lib.rs
oracle-onchain/sep40/examples/price_up_down/: Cargo.toml  README.md
oracle-onchain/sep40/examples/price_up_down/cli/: README.md  cli  cli.py  local_settings.py  poetry_install.sh  pyproject.toml
oracle-onchain/sep40/examples/price_up_down/scripts/: deploy.sh
oracle-onchain/sep40/examples/price_up_down/src/: contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
oracle-onchain/v1/: README.md
oracle-onchain/v1/cli/: .gitignore  README.md  binance.py  cli.py  local_settings.py
oracle-onchain/v1/contract/src/: lib.rs  v1.rs
oracle-onchain/v2/: README.md
oracle-onchain/v2/cli/: .gitignore  README.md  binance.py  cli.py  local_settings.py
oracle-onchain/v2/contract/: Cargo.toml  Makefile  README.md  deploy.sh
oracle-onchain/v2/contract/scripts/: deploy.sh  initialize.py  pyproject.toml  source_secret.sh
oracle-onchain/v2/contract/src/: admin.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  v2.rs
oracle-onchain/v2/examples/fetch_lastprice_usd/: Cargo.toml
oracle-onchain/v2/examples/fetch_lastprice_usd/src/: lib.rs
oracle-onchain/v2/js_cli/: cli.js  package-lock.json  package.json
oracle-onchain/v2/oracle-consumer-examples/lastprice_usd/src/: test.rs
oracle-onchain/v2/rs_cli/: Cargo.toml
oracle-onchain/v2/rs_cli/src/: main.rs
oracle-onchain/v2/rust-examples/lastprice_usd/: Cargo.toml  Makefile
oracle-sdk/javascript/: .gitignore  README.md  lightecho_stellar_oracle.js  package-lock.json  package.json  test.js  tests.js  webpack.config.js
oracle-sdk/javascript/example/: index.html  lightecho_stellar_oracle.min.js
oracle-sdk/javascript/wip/: index.html  lightecho_stellar_oracle.js
oracle-sdk/python/: .gitignore  README.md  lightecho_stellar_oracle.py  pyproject.toml  run_tests.sh  tests.py
order_routing/: Cargo.toml  README.md
order_routing/.soroban/: ledger.json
order_routing/src/: lib.rs  test.rs
python_imp/: README.md  config.py  main.py  soroban.py
python_imp/samples/: soroban_hello_world_contract.wasm
soroban_payment_contract/: Cargo.toml
soroban_payment_contract/src/: lib.rs  test.rs
tests/manage_prices_contract/soroban-py/: main.py  soroban.py
tests/manage_prices_contract/src/: lib.rs
xlm_balance_contract/src/: lib.rs  test.rs
xlm_payment_contract/: Cargo.toml  README.md
xlm_payment_contract/src/: lib.rs  test.rs
