[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["BP Ventures"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
stellar-sdk = "9.2.0"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
flask-httpauth = "^4.8.0"
pytz = "^2024.1"
ttm = "^0.14.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.3.*"
types-requests = "^2.28.11.8"
flake8 = "6.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
