[tool.poetry]
name = "lightecho_stellar_oracle"
version = "0.26.0"
description = "Python SDK for the Lightecho Stellar Oracle"
authors = ["BP Ventures"]
readme = "README.md"
homepage = "https://github.com/bp-ventures/lightecho-stellar-oracle/tree/trunk/oracle-sdk/python"
packages = [
    { include = "lightecho_stellar_oracle.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
stellar-sdk = "9.0.0b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
