[tool.poetry]
name = "lightecho_stellar_oracle"
version = "1.6.1"
description = "Python SDK for the Lightecho Stellar Oracle"
authors = ["BP Ventures"]
readme = "README.md"
homepage = "https://github.com/bp-ventures/lightecho-stellar-oracle/tree/trunk/oracle-sdk/python"
packages = [
    { include = "lightecho_stellar_oracle.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
stellar-sdk = "9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
