[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["BP Ventures"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
stellar-sdk = { git = "https://github.com/StellarCN/py-stellar-base.git", branch = "soroban" }
colorama = "^0.4.6"
pandas = "^2.0.1"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
