[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["BP Ventures"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
stellar-sdk = "9.2.0"
colorama = "^0.4.6"
pandas = "^2.0.1"
requests = "^2.30.0"
lightecho_stellar_oracle = { git = "https://github.com/bp-ventures/lightecho-stellar-oracle.git", subdirectory = "oracle-sdk/python" }


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
