[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
#soroban-sdk = "0.9.2"
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", tag = "v20.0.0-rc1" }

[dev_dependencies]
#soroban-sdk = { version = "0.9.2", features = ["testutils"] }
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", tag = "v20.0.0-rc1" , features=["testutils"]}

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
